<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_short_name">TACC</string>
    <string name="app_name">TACC for Android</string>
    <string name="menu_settings">Settings</string>
    <string name="greeting_text">Welcome to</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="logo_description">TulaCo Logo</string>
    <string name="request_password">Request Password</string>
    <string name="new_task">New Task/Ticket</string>
    <string name="customer">Customer</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="active_tasks_list">Active Tasks</string>
    <string name="mark_closed">Mark Closed</string>
    <string name="trak_selected">Track Selected</string>
    <string name="start_time">00:00:00</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="tasks_button">Tasks</string>
    <string name="new_label">New</string>

    <!-- Activities titles -->
    <string name="title_activity_login">Login In</string>
    <string name="title_activity_items_list">ItemsList</string>
    <string name="title_activity_add_record">AddRecord</string>
    <string name="title_activity_add_tracking_item">Add Item/Ticket</string>
    <string name="title_activity_select_to_track">SelectToTrackActivity</string>
    <string name="title_activity_in_time">InTimeActivity</string>
    <string name="title_activity_filters">Filters</string>
    <string name="title_activity_push_timesheet">Timesheet</string>
    <string name="title_activity_record_list">Records</string>
    <!-- // -->


    <!-- Hints -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_stay_signed">Stay signed</string>
    <!-- // -->

</resources>