<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectToTrackActivity" >

    <RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
    	
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text=""
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/active_tasks_list"
            />
        
    </RelativeLayout>
    
    <ListView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        >
    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:text="@string/mark_closed"
            />
        
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:text="@string/trak_selected"
            />
        
    </LinearLayout>
        
</LinearLayout>